--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:sse": "node dist/index.js --sse",
     "test": "vitest run"
   },
   "keywords": [],
@@ -16,6 +17,8 @@
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@types/adm-zip": "^0.5.7",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "axios": "^1.13.5",
     "better-sqlite3": "^12.6.2",
@@ -27,6 +30,8 @@
   "dependencies": {
     "adm-zip": "^0.5.16",
     "cheerio": "^1.2.0",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
     "fast-xml-parser": "^5.3.6"
   }
 }
