--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@modelcontextprotocol/sdk": "^1.26.0",
     "@types/adm-zip": "^0.5.7",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
-    "axios": "^1.13.5",
-    "better-sqlite3": "^12.6.2",
-    "dotenv": "^17.3.1",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.18",
-    "zod": "^4.3.6"
+    "vitest": "^4.0.18"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "adm-zip": "^0.5.16",
+    "axios": "^1.13.5",
+    "better-sqlite3": "^12.6.2",
     "cheerio": "^1.2.0",
     "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "fast-xml-parser": "^5.3.6"
+    "fast-xml-parser": "^5.3.6",
+    "zod": "^4.3.6"
   }
 }
